apps/obico/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obico-server
  namespace: home
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Obico"
    gethomepage.dev/group: "3D Printing"
    gethomepage.dev/icon: "mdi-printer-3d"
    gethomepage.dev/description: "Print monitoring"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=obico,app.kubernetes.io/name=server"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-obico
  hostnames:
    - obico.stevevaradi.me
  rules:
    - backendRefs:
        - name: obico-server
          port: 3334
